Fixes white space, added FAQ, and broken calendar in bulletins (#45)
Bugfixes + FAQ

--- a/src/components/stylesheets/i.css
+++ b/src/components/stylesheets/i.css
@@ -187,6 +187,7 @@ a {
   -moz-hyphens: auto;
   -webkit-hyphens: auto;
   hyphens: auto;
+  white-space: pre-wrap;
 }
 .facebook .facebook-results,
 .facebook .facebook-profile,
